--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
 <body>
 <h1>Discover hidden places in the world around you</h1>
-<p><a href="#"Download Excursion (Coming Soon!)></a></p>
+<p><a href="#">Download Excursion (Coming Soon!)</a></p>
 
 
 
 </body>
-</html>
+</html> 
