--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h4 class="header--subheader">Excursion remembers places you like, and recommends new points of intrest around you.</h4>
     <p><img src="resources/images/camp.jpg"</p>
     <p><img src="resources/images/phone.png"</p>
+    <h4 class="header--subheader">Coming soon for iPhone and Andriod</h4>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 
 </body>
 </html> 
