--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><img src="resources/images/phone.png"</p>
     <h4 class="header--subheader">Coming soon for iPhone and Andriod</h4>
     <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <p class="footer--copyright">(c) Excursion</p>
 
 </body>
 </html> 
